--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,17 +7,17 @@
 
     <div class="container content">
       <div class="masthead">
-        <h3 class="masthead-title">
-          <a href="{{ site.baseurl }}" title="Home">{{ site.title }}</a>
+        <h1 class="masthead-title">
+          <a href="{{ site.baseurl }}" title="Home">{{ site.title }}</a><br>
           <small>{{ site.tagline }}</small>
-        </h3>
+        </h1>
       </div>
 
       {{ content }}
 
       <div class="footer">
         <p>
-          &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+        menikdp  &copy; {{ site.time | date: '%Y' }}. All rights reserved.
         </p>
       </div>
     </div>
