using G+ instead of Disqus

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
   <br>
   <br>
   {% if page.comments %}
-    {% include disqus.html %}
+    {% include comment.html %}
   {% endif %}
 </div>
 
