add google verify

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,8 @@
 
       <div class="footer">
         <p>
-        menikdp  &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+        <a href="https://plus.google.com/+MenikDamayantiPratiwi?
+   rel=author">menikdp</a> &copy; {{ site.time | date: '%Y' }}. All rights reserved.
         </p>
       </div>
     </div>
