--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
 <div class="comment">
   <br>
   {% if page.comments %}
-    {% include comment.html %}
+    {% include disqus.html %}
   {% endif %}
 </div>
 
